--- a/styles/IPE.css
+++ b/styles/IPE.css
@@ -214,7 +214,7 @@ ul.columns>li:before {
     color: black;
     font-weight: 500;
     font-size: 16px;
-    letter-spacing: 0.5px;
+    
     border-radius: 25px;
     transition: 0.3s;
   }
@@ -224,8 +224,12 @@ ul.columns>li:before {
     min-height: 150px;
     border-radius: 22px;
     resize: none;
-    overflow-y: auto;
   }
+  #text-12 {
+    width: 100% !important;
+    height: 50px !important;
+    max-height: 50px !important;
+}
   
 #form_button {
     background: none;
