--- a/styles/IPE.css
+++ b/styles/IPE.css
@@ -6,11 +6,11 @@
     position:relative;
     height: 40px;
     width: 100%;
-    margin: auto;
-
+    margin: 0;
     display: flex;
     flex-direction: column;
-  
+    min-width: 960px;
+
   }
 
   #site {
@@ -51,6 +51,8 @@
 }
 #logoImage {
     position: center;
+    padding-top: 0.6em;
+  
 }
 .btn {
     text-align: center;
@@ -77,7 +79,7 @@
     font-size: 18px;
     border: solid 2px white;
     background-color: transparent;
-    margin-top: -220px;
+    margin-top: -200px;
     margin-bottom: 75px;
   }
 
@@ -101,13 +103,17 @@
 
   img {
     max-width: 100%;
-    height: 300px;
-    width: 280px;
+    height: 20.7em;
+    width: 20.5em;
+   
 }
 
 .image {
-    flex-basis: 30%;
-    float: right;
+    flex-basis: 36%;
+    float:right;
+    display:inline;
+    
+    
   }
 
 h2 {
@@ -126,7 +132,6 @@ li {
     text-align: center;
 }
 .col {
-    float: left;
     text-align: center;
 }
 
@@ -318,71 +323,14 @@ line-height: 20px;
   }
   
 
-  
-  
-  
-  @media (max-width: 850px) {
-    .form {
-      grid-template-columns: 1fr;
-    }
-  
-    .text {
-      margin: 1rem 0 1.5rem 0;
-    }
-  
-    .social-media {
-      padding: 1.5rem 0 0 0;
-    }
-  }
-  
-  @media (max-width: 480px) {
-    .container {
-      padding: 1.5rem;
-    }
-  
-    form,
-    .contact-info {
-      padding: 1.7rem 1.6rem;
-    }
-  
-    .text,
-    .information,
-    .social-media p {
-      font-size: 0.8rem;
-    }
-  
-    .title {
-      font-size: 1.15rem;
-    }
-  
-    .social-icons a {
-      width: 30px;
-      height: 30px;
-      line-height: 30px;
-    }
-  
-    .icon {
-      width: 23px;
-    }
-  
-    .input {
-      padding: 0.45rem 1.2rem;
-    }
-  
-    .btn {
-      padding: 0.45rem 1.2rem;
-    }
-  }
-  @media (max-width: 960px) {
-    p { font-size: 1em; }
-  }
-
   .contentServices {
     display: block;
     text-align: center;
     margin-top: 50px;
     padding-top: 50px;
     padding-bottom: 20px;
+    line-height: normal;
+
 
    }
 
@@ -476,5 +424,67 @@ padding-right: 45px;
     padding: 90px;
     font-size: 18px;
     margin-bottom: 70px;
-  
   }
+
+  
+  
+  @media (max-width: 900px) {
+    .form {
+      grid-template-columns: 1fr;
+    }
+  
+    .text {
+      margin: 1rem 0 1.5rem 0;
+    }
+  
+    .social-media {
+      padding: 1.5rem 0 0 0;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .container {
+      padding: 1.5rem;
+    }
+  
+    form,
+    .contact-info {
+      padding: 1.7rem 1.6rem;
+    }
+  
+    .text,
+    .information,
+    .social-media p {
+      font-size: 0.8rem;
+    }
+  
+    .title {
+      font-size: 1.15rem;
+    }
+  
+    .social-icons a {
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+    }
+  
+    .icon {
+      width: 23px;
+    }
+  
+    .input {
+      padding: 0.45rem 1.2rem;
+    }
+  
+    .btn {
+      padding: 0.45rem 1.2rem;
+    }
+  }
+  @media (max-width: 960px) {
+    p { font-size: 1em; }
+ 
+  }
+ .imgSer{
+
+text-align: center;
+ }
