--- a/styles/IPE.css
+++ b/styles/IPE.css
@@ -1,15 +1,13 @@
 
   
   body {
-    background-color: rgb(47, 46, 46);
+    background-color: rgb(28, 27, 27);
     font-family: "Poppins", sans-serif;
     position:relative;
-    height: 40px;
     width: 100%;
-    margin: 0;
-    display: flex;
+    display: inline-block;
     flex-direction: column;
-    min-width: 960px;
+    margin-bottom: 70px;
 
   }
 
@@ -18,10 +16,12 @@
     display: block;
 }
   nav {
-    padding: 20px 0;
+    padding: 10px 0;
     display: flex;
     flex-direction: row;
     align-items: center;
+
+  
   }
   .nav-link {
     color: rgba(240, 157, 4, 0.96) !important;
@@ -68,8 +68,6 @@
     color: white;
     font-size: 18px;
     padding: 15px 20px;
-
-
   }
   
   .btn-branding-outline {
@@ -96,7 +94,6 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 0;
-    margin: 0 auto;
     width: 100%;
 
   }
@@ -105,15 +102,15 @@
     max-width: 100%;
     height: 20.7em;
     width: 20.5em;
-   
 }
 
+
 .image {
-    flex-basis: 36%;
-    float:right;
-    display:inline;
-    
-    
+    flex-basis: 20%;
+    float: right;
+    display: block;
+  width: 23em;
+
   }
 
 h2 {
@@ -127,6 +124,7 @@ h2 {
 li {
     display: inline;
     list-style-type: disc;
+    
     color: white;
     font-size: 20px; 
     text-align: center;
@@ -144,14 +142,14 @@ ul.columns>li:before {
     color: white;
     margin: 10px;
   }
+
 .description {
     width: 100%;
     border-width:2px;
     border-style:solid;
     border-radius: 5px;
-    background-color: rgb(199, 193, 193);
-    padding-top: 35px;
-    padding-bottom: -100px;
+    background-color: rgb(119, 117, 117);
+    padding: 9px;
     margin-top: -55px;
     font-family: "Poppins", sans-serif;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
@@ -182,7 +180,7 @@ ul.columns>li:before {
   }
   
   .contact-form {
-    background-color: rgb(199, 193, 193);
+    background-color: rgb(119, 117, 117);
     position: relative;
     line-height: 1.5px;
   }
@@ -192,6 +190,7 @@ ul.columns>li:before {
     z-index: 10;
     overflow: hidden;
     position: relative;
+    margin-bottom: -22px;
   }
   div.contact-info::before {
     content: none;
@@ -213,16 +212,31 @@ ul.columns>li:before {
   .input {
     width: 100%;
     outline: none;
-    border: 2px solid #fafafa;
+    border: 2px solid white;
     background: none;
     padding: 0.6rem 1.2rem;
-    color: black;
+    color: black !important;
     font-weight: 500;
     font-size: 16px;
     letter-spacing: 0.5px;
     border-radius: 25px;
     transition: 0.3s;
   }
+  ::-webkit-input-placeholder {
+    color:black;
+}
+
+::-moz-placeholder {
+    color: black;
+}
+
+::-ms-placeholder {
+    color: black;;
+}
+
+::placeholder {
+    color:black;
+}
   
   textarea.input {
     padding: 0.8rem 1.2rem;
@@ -236,8 +250,8 @@ line-height: 20px;
   
 #form_button {
     background: none;
-    border: solid 2px black;
-    color: black;
+    border: solid 2px white;
+    color: white;
     cursor: pointer;
     display: block;
     font-weight: bold;
@@ -321,84 +335,77 @@ line-height: 20px;
   .social-icons a:hover {
     transform: scale(1.05);
   }
-  
-
+ 
   .contentServices {
     display: block;
     text-align: center;
-    margin-top: 50px;
-    padding-top: 50px;
+    margin-top: 120px;
+    margin-bottom: -22px;
+    padding-top: 10px;
     padding-bottom: 20px;
     line-height: normal;
-
+    padding-left: -50px;
 
    }
 
 
 .services-text {
-
-    font-size: 20px;
-    font-weight:525;
+  color:#000;
+    font-size: 23px;
+    font-weight:540;
     font-family: "Poppins", sans-serif;
 }
  
   .col-ser li {
-    font-size: 17px;
+    font-size: 19px;
     display: inline-block;
     color: black;
-padding-right: 45px;
-
   }
 
   ul.col-ser>li:before {
     content: "•";
     font-size: 1em;
+    position: relative;
     font-weight: bold;
     top: 1px;
     color: black;
-    margin: 2px;
+ 
   }
 
  footer {
 
     height: 40px; 
+    display:inline;
     text-align: center;
    padding: 10px 10px 10px 10px;
-   min-width: 960px;
+    min-width: 130px;
    margin-bottom: -5px;
    margin-top: 20px;
 }
 
 .btn-branding-outline-foot {
-    color: white;
+    color:rgba(240, 157, 4, 0.96);
     border: 1px solid white;
     border-radius: 4px;
     font-size: 18px;
     border: solid 2px white;
     background-color: transparent;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    padding-left: 4px;
-    float:left; 
-    width: 200px;
+    margin: 7px;
+    padding: 10px;
+
     }  
  
 .pfoot{
-    color: white;
-    float:left; 
-    width: 400px; 
-    margin-top: 10px;
-    margin-bottom: 5px;
+    color:rgba(240, 157, 4, 0.96);
+    margin: 7px;
     }
 
 .social-icons-foot a {
     float:right;
-    width: 400px;
-    width: 45px;
+    margin: 7px;
     height: 45px;
-    color: lightblue;
+    color:rgba(240, 157, 4, 0.96);
     text-align:center;
-    line-height: 35px;
     margin-right: 0.5rem;
     transition: 0.3s;
     text-shadow: 0 0 2px #000;
@@ -412,8 +419,8 @@ padding-right: 45px;
 .imgFoot {
     height: 80px;
     width:150px;
-    float:left;
-    margin-right: 90px;
+    margin: 0;
+   
    }
 
    .aboutServices {
@@ -422,8 +429,9 @@ padding-right: 45px;
     margin-top: 50px;
     line-height: 22px;
     padding: 90px;
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 70px;
+    color: #000;
   }
 
   
@@ -487,4 +495,7 @@ padding-right: 45px;
  .imgSer{
 
 text-align: center;
+ }
+ .row{
+  padding-right: 0px;
  }
