--- a/styles/IPE.css
+++ b/styles/IPE.css
@@ -292,10 +292,10 @@ line-height: 20px;
   
   .information {
     display: flex;
-    color: black;
+    color:rgba(240, 157, 4, 0.96);
     margin: 0.7rem 0;
     align-items: center;
-    font-size: 15px;
+    font-size: 19px;
     
   }
   
