--- a/styles/IPE.css
+++ b/styles/IPE.css
@@ -117,6 +117,9 @@ h2 {
     font-size: 27px;
     line-height: 1;
     margin-bottom: 0.7rem;
+  display: block;
+    text-align: center;
+    
   
 }
 
@@ -130,7 +133,7 @@ li {
 }
 .col {
     text-align: center;
-    margin-left: -35px;
+    margin-left: -5px;
     display: inline-block;
 }
 
@@ -141,7 +144,7 @@ ul.columns>li:before {
     font-weight: bold;
     top: 1px;
     color: white;
-    margin: 10px;
+    margin: 4px;
     
   }
 
