--- a/styles/IPE.css
+++ b/styles/IPE.css
@@ -1,20 +1,21 @@
 
-  
+
   body {
-    background-color: rgb(28, 27, 27);
+
     font-family: "Poppins", sans-serif;
     position:relative;
     width: 100%;
     display: inline-block;
     flex-direction: column;
     margin-bottom: 70px;
-
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(/images/cover.jpg);
+    background-position: center;
+    background-size: cover;
+   
   }
 
-  #site {
-    position: relative;
-    display: block;
-}
+ 
+    
   nav {
     padding: 10px 0;
     display: flex;
@@ -31,7 +32,7 @@
     padding: 0;
     text-align: center;
     margin: auto;
-    font-size: 27px;
+    font-size: 20px;
     margin-left: 260px;
   }
 
@@ -97,57 +98,96 @@
     width: 100%;
 
   }
+  .row{
+    width: 100%;
+    min-height: 50vh;
+    position: relative;
+    margin-top: -20px;
+
+  }
 
   img {
+  
     max-width: 100%;
     height: 20.7em;
     width: 20.5em;
 }
 
+.ima.anim{
+  animation-delay: 1.5s;
+}
 
-.image {
-    display: inline-block;
-  width: 23em;
-
+  .anim{
+    opacity: 0;
+    transform: translateY(30px);
+    animation: moveup 0.5s linear forwards;
   }
+  @keyframes moveup{
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
 
 h2 {
-    color: black;
+    color: white;
     font-weight: 700px;
     font-size: 27px;
     line-height: 1;
     margin-bottom: 0.7rem;
-  display: block;
+   display: inline;
+   position: relative;
+    padding: 3px 0 2px 25px;
     text-align: center;
-    
-  
+    animation-delay: 0.5s;
+
+}
+ul {
+  list-style-type: "*";
+}
+ul li {
+  list-style: none;
+  position: relative;
+  padding: 3px 0 2px 15px;
 }
 
 li {
     display: inline;
-    list-style-type: disc;
-    
     color: white;
     font-size: 20px; 
     text-align: center;
+    animation-delay: 1s;
 }
+
+
 .col {
-    text-align: center;
-    margin-left: -5px;
-    display: inline-block;
+    
+    margin-top: -320px;
+
+   
+}
+.img-fluid{
+  float:right;
+  width: 355px;
+  height: 340px;
+  margin-bottom: 10px;;
+  max-width:100%;
+  height:auto;
 }
 
 ul.columns>li:before {
-    content: "•";
-    position: relative;
-    font-size: 1.3em;
-    font-weight: bold;
-    top: 1px;
-    color: white;
-    margin: 4px;
-    
+ 
+    content: '*';
+    position: absolute;
+    top: 6px;
+    left: 0;
   }
-
+    
+  .no-gutter > [class*='col']
+{
+padding-right: 80px;
+padding-left: 80px;
+}
 .description {
     width: 100%;
     border-width:2px;
@@ -159,6 +199,7 @@ ul.columns>li:before {
     font-family: "Poppins", sans-serif;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
     height: auto;
+  
   
 }
   
@@ -360,15 +401,22 @@ line-height: 20px;
     font-weight:540;
     font-family: "Poppins", sans-serif;
 }
+.col-s {
+  padding-top: 20px;
+  padding-bottom: 30px;;
+}
  
   .col-ser li {
     font-size: 19px;
     display: inline-block;
     color: black;
+    
+    
   }
+  
 
   ul.col-ser>li:before {
-    content: "•";
+    content: "*";
     font-size: 1em;
     position: relative;
     font-weight: bold;
